# engnr-nsu-cpp-2021

./: .gitmodules
.github/buildsteps/macos/: run-unittests.sh
.github/buildsteps/windows/: run-unittests.bat
.github/workflows/: ci.yml
1/: CMakeLists.txt  Hash_fun.cpp  Hash_fun.h  main.cpp
2/: CMakeLists.txt  StackCalculator.h  main.cpp
2/mytests/: CMakeLists.txt  mytest.cpp
2/src/command/: CMakeLists.txt  Commands.cpp  Commands.h  StackCalculator.cpp
2/src/main/: CMakeLists.txt  main.cpp
3/: CMakeLists.txt  README.md  linked_list.h  main.cpp  tests.cpp
